# walk-the-dog-rs-wasm

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: browser.rs  game.rs  game_segments.rs  game_state.rs  lib.rs  segments.rs  sound.rs
src/engine/: audio.rs  button.rs  game.rs  image.rs  keys.rs  mod.rs  renderer.rs  sprites.rs
static/: index.html  tiles.json
